# cooked

./: .dockerignore  .gitignore  Dockerfile  README.md  Results_Training.ipynb  Training-DTDE.ipynb  WIP-policy_comparison_competition.py  ai_only_game_visualization.py  analysis.ipynb  analysis_classic.ipynb  analysis_classic.py  analysis_competition.ipynb  analysis_competition.py  analysis_comprehensive.py  analysis_pretrained.ipynb  analysis_pretrained.py  analysis_simulations.py  auto_replay_loop.py  check_corrupted_simulations.py  copy_experiment_data.py  entrypoint.sh  environment.yml  experimental_simulation.py  game_visualization-DTDE-spoiledbroth.py  game_visualization.py  generate_figures_competition.py  launch_training-DTDE.sh  local_experimental_simulation.py  main.py  main_coboxing.py  main_llm.py  main_replay.py  main_replay_with_record.py  main_spoiledbroth.py  nohup_v2.1  nohup_v2.2  nohup_v3.1  old_ai_only_game_visualization.py  p_values-collaboration.py  policy_comparison_competition.py  (+18 more)
engine/: MANIFEST.in  base_agent.py  base_game.py  core.py  engine_runner.py  game_object.py  pyproject.toml
engine/agents/replay_agent/: __init__.py
engine/app/: ai_only_app.py  session_app.py
engine/extensions/gridworld/: grid.py
engine/extensions/renderer2d/: basic_2d.py  clickable_2d.py  renderer_2d_offline.py  text.py  (+1 more)
engine/interface/: ai_only_engine_routes.py  core_ui_module.py  engine_routes.py  static_routes.py
engine/logging/: replay_loader.py
engine/session/: session.py  session_manager.py  single_session_manager.py
engine/static/: engine_ui.js
(+3418 files in other folders)
